--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -69,7 +69,7 @@
   
   .navigation {
       display: flex;
-      padding: 5px;
+      padding-right: 17%;
       justify-content: space-between;
   }
   
@@ -123,3 +123,11 @@
   .myList li:nth-child(4) {
       background-color: rgb(140, 4, 4);
   }
+  /* Rectangle 3 */
+  
+  position: absolute;
+  width: 13px;
+  height: 900px;
+  left: 740px;
+  top: 0px;
+  background: #0039A6;
